--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 				<section>
 					<h5>Subway Station Locations owned by 서울메트로</h5>
-					<iframe src="/seoul-popul.html" width="960"
+					<iframe src="seoul-popul.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
 				<section>Slide 2</section>
