add population plot

--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<h5>Subway Station Locations owned by 서울메트로</h5>
-					<iframe src="seoul-popul.html" width="960"
+					<h5>Seoul Subway Station Locations owned by 서울메트로</h5>
+					<iframe src="seoul-subway.html" width="960"
+					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+				</section>
+				<section>
+					<h5>Seoul Population in 2013</h5>
+					<iframe src="seoul-population.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
 				<section>Slide 2</section>
