--- a/index.html
+++ b/index.html
@@ -24,18 +24,19 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
+				<section data-transition="fade-out">
 					<h5>Seoul Subway Station Locations owned by 서울메트로</h5>
 					<iframe src="seoul-subway.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
-				<section>
+				<section data-transition="fade-out">
 					<h5>Seoul Population in 2013</h5>
 					<iframe src="seoul-population.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
-				<section>Slide 2</section>
-				<section>Slide 3</section>
+				<section data-transition="fade-out">
+					<h1>감사합니다.</h1>
+				</section>
 			</div>
 		</div>
 		<script src="lib/js/head.min.js"></script>
