--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 			<div class="slides">
 				<section data-transition="fade-out">
 					<h5>Seoul Subway Stations  owned by 서울메트로</h5>
-					<iframe src="seoul-subway.html" width="960"
+					<iframe src="d3works/seoul-subway.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
 				<section data-transition="fade-out">
 					<h5>Seoul Population in 2013</h5>
-					<iframe src="seoul-population.html" width="960"
+					<iframe src="d3works/seoul-population.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
 				<section data-transition="fade-out">
