--- a/d3works/seoul-population.html
+++ b/d3works/seoul-population.html
@@ -9,6 +9,7 @@
 </style>
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
+<script src="//d3js.org/queue.v1.min.js"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script>
 var width = 960,
@@ -24,7 +25,13 @@ var path = d3.geo.path().projection(projection);
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
-d3.json("https://gist.githubusercontent.com/yoon-gu/292357d88f07092f8759238a10cddd2f/raw/bbcdb2cbca6fa5278038e44a6d0aad3f9521fb3e/.seoul_submunicipalities_topo.json", function(error, kor) {
+
+queue()
+  .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/292357d88f07092f8759238a10cddd2f/raw/bbcdb2cbca6fa5278038e44a6d0aad3f9521fb3e/.seoul_submunicipalities_topo.json")
+  .await(ready); 
+  
+function ready(error, kor)
+{
   if (error) throw error;
   svg.append("g")
       .attr("class", "counties")
@@ -37,5 +44,5 @@ d3.json("https://gist.githubusercontent.com/yoon-gu/292357d88f07092f8759238a10cd
       .datum(topojson.mesh(kor, kor.objects.seoul_submunicipalities_geo, function(a, b) { return a.id !== b.id; }))
       .attr("class", "states")
       .attr("d", path);
-});
+};
 </script>
