--- a/d3works/seoul-gu.html
+++ b/d3works/seoul-gu.html
@@ -67,7 +67,7 @@ function ready(error, seoul) {
         .attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
         .attr("dy", ".35em")
         .attr("class", "municipality-label")
-        .text(function(d) { return d.properties.name; })
+        .text(function(d) { return d.properties.name; });
 }
 
 </script>
