--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 				</section>
 				<section data-transition="fade-out">
 					<h5>Seoul Population in 2013</h5>
+					<iframe src="d3works/seoul-population-gu.html" width="960"
+					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+				</section>
+				<section data-transition="fade-out">
+					<h5>Seoul Population in 2013</h5>
 					<iframe src="d3works/seoul-population.html" width="960"
 					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 				</section>
