--- a/d3works/seoul-population-gu.html
+++ b/d3works/seoul-population-gu.html
@@ -37,7 +37,7 @@ path {
 var width = 960,
     height = 550;
 var fill = d3.scale.linear()
-    .domain([700, 50000])
+    .domain([130000, 680000])
     .range(["steelblue", "brown"]);
 var projection = d3.geo.mercator()
     .center([126.9895, 37.5651])
@@ -51,17 +51,16 @@ var svg = d3.select("body").append("svg")
 var popByName = d3.map();
 
 queue()
-  .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/292357d88f07092f8759238a10cddd2f/raw/bbcdb2cbca6fa5278038e44a6d0aad3f9521fb3e/.seoul_submunicipalities_topo.json")
-  .defer(d3.csv, "https://gist.githubusercontent.com/yoon-gu/4c1f46d5726c7abb9f83b151bb506f61/raw/fa28ed989c750650200ceeabf487d780de51b37e/.popul_data.csv", function(d) {
+  .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/b051fd123385303a5c03f0e0a833516c/raw/9fff4a65830be008709112c190c3ed939d42e994/seoul_municipalities_topo.json")
+  .defer(d3.csv, "popul_data.csv", function(d) {
       popByName.set(d.name, +d.population);
   })
-  .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/b051fd123385303a5c03f0e0a833516c/raw/9fff4a65830be008709112c190c3ed939d42e994/seoul_municipalities_topo.json")
   .await(ready); 
   
-function ready(error, kor, popul, seoul)
+function ready(error, seoul, popul)
 {
   if (error) throw error;
-  var features = topojson.feature(kor, kor.objects.seoul_submunicipalities_geo).features;
+  var features = topojson.feature(seoul, seoul.objects.seoul_municipalities_geo).features;
   
   features.forEach(function(d) {
       d.properties.population = popByName.get(d.properties.name);
@@ -73,14 +72,14 @@ function ready(error, kor, popul, seoul)
       .data(features)
     .enter().append("path")
       .attr("d", path)
-      .style("fill", function(d) { return fill(d.properties.population); })
-      .append("title").text(function(d) {return d.properties.name});
+      .style("fill", function(d) { return fill(d.properties.population); });
 
   svg.append("path")
       .datum(topojson.mesh(seoul, seoul.objects.seoul_municipalities_geo, function(a, b) { return a !== b; }))
       .attr("class", "boundary")
       .attr("d", path);
   var features = topojson.feature(seoul, seoul.objects.seoul_municipalities_geo).features;
+
   svg.selectAll('text')
       .data(features)
       .enter().append("text")
