--- a/d3works/seoul-subway.html
+++ b/d3works/seoul-subway.html
@@ -52,6 +52,15 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
+var tooltip = d3.select("body")
+  .append("div")
+  .style("position", "absolute")
+  .style("z-index", "10")
+  .style("visibility", "hidden")
+  .style("font-family", "sans-serif")
+  .style("color", "black")
+  .style("font-size", "11px");
+
 queue()
     .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/b051fd123385303a5c03f0e0a833516c/raw/9fff4a65830be008709112c190c3ed939d42e994/seoul_municipalities_topo.json")
     .defer(d3.csv, "https://gist.githubusercontent.com/yoon-gu/902efb6d5bd345e3837e035a3c0642b8/raw/3a18efd4d12b792d482f1867bcfc79645876b5ce/station_latlen.csv")
@@ -70,16 +79,6 @@ function ready(error, kor, stations) {
       .attr("class", "states")
       .attr("d", path);
 
-  svg.selectAll("circle")
-      .data(stations)
-    .enter().append("circle")
-      .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
-      .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
-      .attr("r", 3)
-      .attr("opacity", 0.7)
-      .attr("class", function(d){ return "no_l_" + d.no_line; })
-      .append("title").text(function(d) {return d.name});
-
   var features = topojson.feature(kor, kor.objects.seoul_municipalities_geo).features;
   svg.selectAll('text')
       .data(features)
@@ -88,6 +87,26 @@ function ready(error, kor, stations) {
         .attr("dy", ".35em")
         .attr("class", "municipality-label")
         .text(function(d) { return d.properties.name; })
+  
+  svg.selectAll("circle")
+      .data(stations)
+    .enter().append("circle")
+      .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
+      .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
+      .attr("r", 3)
+      .attr("opacity", 0.7)
+      .attr("class", function(d){ return "no_l_" + d.no_line; })
+      .on("mouseover", function(d){
+        tooltip.style("visibility", "visible")
+        .text(d.name);
+      })
+      .on("mousemove", function(){
+        tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
+      })
+      .on("mouseout", function(){
+        tooltip.style("visibility", "hidden");
+      });
+
 }
 
 </script>
