--- a/d3works/seoul-gu.html
+++ b/d3works/seoul-gu.html
@@ -7,16 +7,16 @@ path {
 }
 
 .land {
-  fill: #ddd;
+  fill: #4C4C4C;
 }
 
 .states {
   fill: none;
-  stroke: #fff;
+  stroke: darkgray;
 }
 
 svg .municipality-label {
-  fill: #808080;
+  fill: white;
   font-size: 12px;
   font-weight: 300;
   text-anchor: middle;
