--- a/d3works/seoul-subway.html
+++ b/d3works/seoul-subway.html
@@ -7,12 +7,12 @@ path {
 }
 
 .land {
-  fill: #ddd;
+  fill: #4C4C4C;
 }
 
 .states {
   fill: none;
-  stroke: #fff;
+  stroke: darkgray;
 }
 
 circle.no_l_1{ fill: #1B2876; }
@@ -25,7 +25,7 @@ circle.no_l_7{ fill: #566112; }
 circle.no_l_8{ fill: #DB005B; }
 
 svg .municipality-label {
-  fill: #808080;
+  fill: white;
   font-size: 12px;
   font-weight: 300;
   text-anchor: middle;
