white font color

--- a/d3works/seoul-subway.html
+++ b/d3works/seoul-subway.html
@@ -58,7 +58,7 @@ var tooltip = d3.select("body")
   .style("z-index", "10")
   .style("visibility", "hidden")
   .style("font-family", "sans-serif")
-  .style("color", "black")
+  .style("color", "white")
   .style("font-size", "11px");
 
 queue()
