--- a/d3works/seoul-subway.html
+++ b/d3works/seoul-subway.html
@@ -40,7 +40,7 @@ svg .municipality-label {
 
 var width = 960,
     height = 550;
-
+var centered;
 var projection = d3.geo.mercator()
     .center([126.9895, 37.5651])
     .scale(90000)
@@ -51,6 +51,15 @@ var path = d3.geo.path().projection(projection);
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
+
+var g = svg.append("g");
+
+svg.append("rect")
+    .attr("class", "background")
+    .attr("width", width)
+    .attr("height", height)
+    .style("fill", "none")
+    .on("click", clicked);
 
 var tooltip = d3.select("body")
   .append("div")
@@ -68,19 +77,22 @@ queue()
 
 function ready(error, kor, stations) {
   if (error) throw error;
+  var features = topojson.feature(kor, kor.objects.seoul_municipalities_geo).features;
+  g.selectAll("path")
+        .data(features)
+      .enter().append("path")
+        .attr("class", "land")
+        .attr("d", path)
+        .attr("id", function(d) { return d.properties.name; })
+        .on("click", clicked)
+        .append("title");
 
-  svg.append("path")
-      .datum(topojson.feature(kor, kor.objects.seoul_municipalities_geo))
-      .attr("class", "land")
-      .attr("d", path);
-
-  svg.append("path")
+  g.append("path")
       .datum(topojson.mesh(kor, kor.objects.seoul_municipalities_geo, function(a, b) { return a !== b; }))
       .attr("class", "states")
       .attr("d", path);
 
-  var features = topojson.feature(kor, kor.objects.seoul_municipalities_geo).features;
-  svg.selectAll('text')
+  g.selectAll('text')
       .data(features)
       .enter().append("text")
         .attr("transform", function(d) { return "translate(" + path.centroid(d) + ")"; })
@@ -88,7 +100,7 @@ function ready(error, kor, stations) {
         .attr("class", "municipality-label")
         .text(function(d) { return d.properties.name; })
   
-  svg.selectAll("circle")
+  g.selectAll("circle")
       .data(stations)
     .enter().append("circle")
       .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
@@ -109,4 +121,28 @@ function ready(error, kor, stations) {
 
 }
 
+function clicked(d) {
+  var x, y, k;
+
+  if (d && centered !== d) {
+    var centroid = path.centroid(d);
+    x = centroid[0];
+    y = centroid[1];
+    k = 3;
+    centered = d;
+  } else {
+    x = width / 2;
+    y = height / 2;
+    k = 1;
+    centered = null;
+  }
+
+  g.selectAll("path")
+      .classed("active", centered && function(d) { return d === centered; });
+
+  g.transition()
+      .duration(750)
+      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")scale(" + k + ")translate(" + -x + "," + -y + ")")
+      .style("stroke-width", 1.5 / k + "px");
+}
 </script>
