--- a/d3works/seoul-line2.html
+++ b/d3works/seoul-line2.html
@@ -14,7 +14,7 @@ path {
   fill: none;
   stroke: darkgray;
 }
-
+circle{opacity: 0.4;}
 circle.no_l_1{ fill: #1B2876; }
 circle.no_l_2{ fill: #34A939; }
 circle.no_l_3{ fill: #FD5C09; }
@@ -97,7 +97,7 @@ function ready(error, kor, stations) {
       .filter(function(d) { return d.no_line === "2" })
       .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
       .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
-      .attr("r", 3)
+      .attr("r", function(d){return 30 * Math.random();})
       .attr("opacity", 0.7)
       .attr("class", function(d){ return "no_l_" + d.no_line; })
       .on("mouseover", function(d){
