--- a/index.html
+++ b/index.html
@@ -25,36 +25,42 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-transition="fade-out">
-					<h5>Seoul municipalities</h5>
-					<iframe src="d3works/seoul-gu.html" width="960"
-					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					<section data-transition="fade-out">
+						<h5>Seoul municipalities</h5>
+						<iframe src="d3works/seoul-gu.html" width="960"
+						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					</section>
+					<section data-transition="fade-out">
+						<h5>Seoul submunicipalities</h5>
+						<iframe src="d3works/seoul-dong.html" width="960"
+						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					</section>
 				</section>
 				<section data-transition="fade-out">
-					<h5>Seoul submunicipalities</h5>
-					<iframe src="d3works/seoul-dong.html" width="960"
-					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					<section data-transition="fade-out">
+						<h5>Seoul Population in 2013</h5>
+						<iframe src="d3works/seoul-population-gu.html" width="960"
+						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					</section>
+					<section data-transition="fade-out">
+						<h5>Seoul Population in 2013</h5>
+						<iframe src="d3works/seoul-population.html" width="960"
+						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					</section>	
 				</section>
 				<section data-transition="fade-out">
-					<h5>Seoul Population in 2013</h5>
-					<iframe src="d3works/seoul-population-gu.html" width="960"
-					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					<section data-transition="fade-out">
+						<h5>Seoul Subway Stations owned by 서울메트로</h5>
+						<iframe src="d3works/seoul-subway.html" width="960"
+						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					</section>
+					<section data-transition="fade-out">
+						<h5>Line 2 : In/Out flux</h5>
+						<iframe src="d3works/seoul-line2.html" width="960"
+						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
+					</section>
 				</section>
-				<section data-transition="fade-out">
-					<h5>Seoul Population in 2013</h5>
-					<iframe src="d3works/seoul-population.html" width="960"
-					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
-				</section>
-				<section data-transition="fade-out">
-					<h5>Seoul Subway Stations owned by 서울메트로</h5>
-					<iframe src="d3works/seoul-subway.html" width="960"
-					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
-				</section>
-				<section data-transition="fade-out">
-					<h5>Line 2 : In/Out flux</h5>
-					<iframe src="d3works/seoul-line2.html" width="960"
-					marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
-				</section>
-				<section data-transition="fade-out">
+				<section data-transition="slide-out">
 					<h1>감사합니다.</h1>
 				</section>
 			</div>
