--- a/d3works/seoul-population-gu-animated.html
+++ b/d3works/seoul-population-gu-animated.html
@@ -56,26 +56,19 @@ var tooltip = d3.select("body")
 
 queue()
   .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/b051fd123385303a5c03f0e0a833516c/raw/9fff4a65830be008709112c190c3ed939d42e994/seoul_municipalities_topo.json")
-  .defer(d3.csv, "popul_data.csv", function(d) {
-      popByName.set(d.name, +d.population);
-  })
   .await(ready); 
   
 function ready(error, seoul, popul)
 {
   if (error) throw error;
   var features = topojson.feature(seoul, seoul.objects.seoul_municipalities_geo).features;
-  
-  features.forEach(function(d) {
-      d.properties.population = popByName.get(d.properties.name);
-    });
 
   svg.append("g")
     .selectAll("path")
       .data(features)
     .enter().append("path")
       .attr("d", path)
-      .style("fill", function(d) { return fill(d.properties.population); })
+      .style("fill", function(d) { return fill(550000 * Math.random() + 13000); })
       .on("mouseover", function(d){
         tooltip.style("visibility", "visible")
         .text(Math.round(d.properties.population / 10000) + "만명");
@@ -100,4 +93,9 @@ function ready(error, seoul, popul)
         .attr("class", "municipality-label")
         .text(function(d) { return d.properties.name; })
 };
+
+function update(source){
+
+};
+
 </script>
