--- a/d3works/seoul-population-gu-animated.html
+++ b/d3works/seoul-population-gu-animated.html
@@ -105,10 +105,32 @@ function ready(error, seoul)
         .text(function(d) { return d.properties.name; })
 };
 
-function change(opc) {
-  svg.selectAll("path")
-    .transition()
-    .delay(500)
-    .style("opacity", opc);
+function change() {
+  d3.csv("popul_data.csv", function(error, popul) {
+        popul.forEach(function(d){
+          popByName.set(d.name, +d.population);
+        });
+
+        features.forEach(function(d) {
+            d.properties.population = popByName.get(d.properties.name);
+          });
+
+        svg.selectAll("path")
+            .data(features)
+            .on("mouseover", function(d){
+              tooltip.style("visibility", "visible")
+              .text(Math.round(d.properties.population / 10000) + "만명");
+            })
+            .on("mousemove", function(){
+              tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
+            })
+            .on("mouseout", function(){
+              tooltip.style("visibility", "hidden");
+            })
+            .transition()
+            .style("fill", function(d) { return fill(d.properties.population); });
+    });
 };
+
+
 </script>
