group by line number

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 					</section>
 					<section data-transition="fade-out">
-						<h5>Line 2 : In/Out flux</h5>
+						<h5>Line 2 : 하루 평균 승차 인구</h5>
 						<iframe src="d3works/seoul-line2.html" width="960"
 						marginwidth="0" marginheight="0" style="height:550px;" scrolling="no"></iframe>
 					</section>
