--- a/d3works/seoul-line2.html
+++ b/d3works/seoul-line2.html
@@ -14,15 +14,15 @@ path {
   fill: none;
   stroke: darkgray;
 }
-circle{opacity: 0.4;}
-circle.no_l_1{ fill: #1B2876; }
-circle.no_l_2{ fill: #34A939; }
-circle.no_l_3{ fill: #FD5C09; }
-circle.no_l_4{ fill: #268BD5; }
-circle.no_l_5{ fill: #7411D9; }
-circle.no_l_6{ fill: #9E3B0B; }
-circle.no_l_7{ fill: #566112; }
-circle.no_l_8{ fill: #DB005B; }
+
+.no_l_1{ fill: #1B2876; }
+.no_l_2{ fill: #34A939; }
+.no_l_3{ fill: #FD5C09; }
+.no_l_4{ fill: #268BD5; }
+.no_l_5{ fill: #7411D9; }
+.no_l_6{ fill: #9E3B0B; }
+.no_l_7{ fill: #566112; }
+.no_l_8{ fill: #DB005B; }
 
 svg .municipality-label {
   fill: white;
@@ -104,30 +104,33 @@ function ready(error, kor, stations, inout) {
       return d3.descending(popByName.get(x.name).on, popByName.get(y.name).on);
     }
   });
-  g.selectAll("circle")
-      .data(stations)
-    .enter().append("circle")
-      .filter(function(d) { return d.no_line === "2" })
-      .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
-      .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
-      .attr("r", function(d){
-        if(popByName.get(d.name))
-        {
-          return rscale(popByName.get(d.name).on);
-        }
-      })
-      .attr("opacity", 0.7)
-      .attr("class", function(d){ return "no_l_" + d.no_line; })
-      .on("mouseover", function(d){
-        tooltip.style("visibility", "visible")
-        .text(d.name);
-      })
-      .on("mousemove", function(){
-        tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
-      })
-      .on("mouseout", function(){
-        tooltip.style("visibility", "hidden");
-      });
+  for (var i = 1; i <= 8; i++) {
+    g.append("g")
+      .attr("class", function(d){ return "no_l_" + i; })
+      .selectAll("circle")
+        .data(stations)
+      .enter().append("circle")
+        .filter(function(d) { return +d.no_line === i })
+        .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
+        .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
+        .attr("r", function(d){
+          if(popByName.get(d.name))
+          {
+            return rscale(popByName.get(d.name).on);
+          }
+        })
+        .attr("opacity", 0.5)
+        .on("mouseover", function(d){
+          tooltip.style("visibility", "visible")
+          .text(d.name);
+        })
+        .on("mousemove", function(){
+          tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
+        })
+        .on("mouseout", function(){
+          tooltip.style("visibility", "hidden");
+        });
+  }
 
 }
 </script>
