no missing circle

--- a/d3works/seoul-line2.html
+++ b/d3works/seoul-line2.html
@@ -118,11 +118,16 @@ function ready(error, kor, stations, inout) {
           {
             return rscale(popByName.get(d.name).on);
           }
+          else
+          {
+            console.log(d.name);
+            return 2;
+          }
         })
         .attr("opacity", 0.5)
         .on("mouseover", function(d){
           tooltip.style("visibility", "visible")
-          .text(d.name);
+          .text(d.name + " : " + (popByName.get(d.name).on / 10000).toFixed(2) + "만명");
         })
         .on("mousemove", function(){
           tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
