--- a/d3works/seoul-line-on.html
+++ b/d3works/seoul-line-on.html
@@ -15,14 +15,14 @@ path {
   stroke: darkgray;
 }
 
-circle.no_l_1{ fill: #1B2876; }
-circle.no_l_2{ fill: #34A939; }
-circle.no_l_3{ fill: #FD5C09; }
-circle.no_l_4{ fill: #268BD5; }
-circle.no_l_5{ fill: #7411D9; }
-circle.no_l_6{ fill: #9E3B0B; }
-circle.no_l_7{ fill: #566112; }
-circle.no_l_8{ fill: #DB005B; }
+.no_l_1{ fill: #1B2876; }
+.no_l_2{ fill: #34A939; }
+.no_l_3{ fill: #FD5C09; }
+.no_l_4{ fill: #268BD5; }
+.no_l_5{ fill: #7411D9; }
+.no_l_6{ fill: #9E3B0B; }
+.no_l_7{ fill: #566112; }
+.no_l_8{ fill: #DB005B; }
 
 svg .municipality-label {
   fill: white;
@@ -37,10 +37,11 @@ svg .municipality-label {
 <script src="//d3js.org/queue.v1.min.js"></script>
 <script src="//d3js.org/topojson.v1.min.js"></script>
 <script>
+var popByName = d3.map();
 
 var width = 960,
     height = 550;
-var centered;
+
 var projection = d3.geo.mercator()
     .center([126.9895, 37.5651])
     .scale(90000)
@@ -54,13 +55,6 @@ var svg = d3.select("body").append("svg")
 
 var g = svg.append("g");
 
-svg.append("rect")
-    .attr("class", "background")
-    .attr("width", width)
-    .attr("height", height)
-    .style("fill", "none")
-    .on("click", clicked);
-
 var tooltip = d3.select("body")
   .append("div")
   .style("position", "absolute")
@@ -73,9 +67,12 @@ var tooltip = d3.select("body")
 queue()
     .defer(d3.json, "https://gist.githubusercontent.com/yoon-gu/b051fd123385303a5c03f0e0a833516c/raw/9fff4a65830be008709112c190c3ed939d42e994/seoul_municipalities_topo.json")
     .defer(d3.csv, "https://gist.githubusercontent.com/yoon-gu/902efb6d5bd345e3837e035a3c0642b8/raw/3cf9c9418da25e195cfe8db9104497408b6e5bbd/station_latlen.csv")
+    .defer(d3.csv, "subway_in_out.csv", function(d){
+        popByName.set(d.station, {"on":+d.on, "off":+d.off});
+    })
     .await(ready);
 
-function ready(error, kor, stations) {
+function ready(error, kor, stations, inout) {
   if (error) throw error;
   var features = topojson.feature(kor, kor.objects.seoul_municipalities_geo).features;
   g.selectAll("path")
@@ -83,9 +80,7 @@ function ready(error, kor, stations) {
       .enter().append("path")
         .attr("class", "land")
         .attr("d", path)
-        .attr("id", function(d) { return d.properties.name; })
-        .on("click", clicked)
-        .append("title");
+        .attr("id", function(d) { return d.properties.name; });
 
   g.append("path")
       .datum(topojson.mesh(kor, kor.objects.seoul_municipalities_geo, function(a, b) { return a !== b; }))
@@ -100,49 +95,53 @@ function ready(error, kor, stations) {
         .attr("class", "municipality-label")
         .text(function(d) { return d.properties.name; })
   
-  g.selectAll("circle")
-      .data(stations)
-    .enter().append("circle")
-      .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
-      .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
-      .attr("r", 3)
-      .attr("opacity", 0.7)
-      .attr("class", function(d){ return "no_l_" + d.no_line; })
-      .on("mouseover", function(d){
-        tooltip.style("visibility", "visible")
-        .text(d.name);
-      })
-      .on("mousemove", function(){
-        tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
-      })
-      .on("mouseout", function(){
-        tooltip.style("visibility", "hidden");
-      });
+  var rscale = d3.scale.linear()
+    .domain([1,110000])
+    .range([3,30]);
 
-}
-
-function clicked(d) {
-  var x, y, k;
-
-  if (d && centered !== d) {
-    var centroid = path.centroid(d);
-    x = centroid[0];
-    y = centroid[1];
-    k = 3;
-    centered = d;
-  } else {
-    x = width / 2;
-    y = height / 2;
-    k = 1;
-    centered = null;
+  stations = stations.sort(function(x, y){
+    if(popByName.get(x.name) && popByName.get(y.name)){
+      return d3.descending(popByName.get(x.name).on, popByName.get(y.name).on);
+    }
+  });
+  for (var i = 1; i <= 8; i++) {
+    g.append("g")
+      .selectAll("circle")
+        .data(stations)
+      .enter().append("circle")
+        .filter(function(d) { return +d.no_line === i })
+        .attr("cx", function(d) { return projection([d.lon, d.lat])[0]; })
+        .attr("cy", function(d) { return projection([d.lon, d.lat])[1]; })
+        .attr("r", function(d){
+          if(popByName.get(d.name))
+          {
+            return rscale(popByName.get(d.name).on);
+          }
+          else
+          {
+            console.log(d.name);
+            return 2;
+          }
+        })
+        .attr("opacity", 0.2)
+        .on("mouseover", function(d){
+          tooltip.style("visibility", "visible")
+          .text(d.name + " : " + (popByName.get(d.name).on / 10000).toFixed(2) + "만명");
+          var g = d3.select(this).node().parentNode;
+          d3.select(g)
+          .attr("class", function(){ return "no_l_" + d.no_line; })
+          .selectAll("circle").attr("opacity", 0.7);
+        })
+        .on("mousemove", function(){
+          tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
+        })
+        .on("mouseout", function(){
+          tooltip.style("visibility", "hidden");
+          var g = d3.select(this).node().parentNode;
+          d3.select(g).attr("class", "")
+            .selectAll("circle").attr("opacity", 0.2);
+        });
   }
 
-  g.selectAll("path")
-      .classed("active", centered && function(d) { return d === centered; });
-
-  g.transition()
-      .duration(750)
-      .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")scale(" + k + ")translate(" + -x + "," + -y + ")")
-      .style("stroke-width", 1.5 / k + "px");
 }
 </script>
