--- a/d3works/seoul-vaccine-population.html
+++ b/d3works/seoul-vaccine-population.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+.vacc {
+  fill:#FF7F00;
+  stroke: black;
+}
 .states {
   fill: none;
   stroke: #fff;
@@ -38,12 +42,18 @@ var projection = d3.geo.mercator()
     .center([126.9895, 37.5651])
     .scale(90000)
     .translate([width/2, height/2]);
+
 var path = d3.geo.path().projection(projection);
 var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
 var popByName = d3.map();
+var fluByName = d3.map();
+
+var rscale = d3.scale.linear()
+    .domain([20000,90000])
+    .range([10,50]);
 
 var tooltip = d3.select("body")
   .append("div")
@@ -59,6 +69,9 @@ queue()
   .defer(d3.csv, "popul_data.csv", function(d) {
       popByName.set(d.name, +d.population);
   })
+  .defer(d3.csv, "flu_2013.csv", function(d) {
+      fluByName.set(d.region, +d.value);
+  })
   .await(ready); 
   
 function ready(error, seoul, popul)
@@ -68,6 +81,8 @@ function ready(error, seoul, popul)
   
   features.forEach(function(d) {
       d.properties.population = popByName.get(d.properties.name);
+      d.properties.flu = fluByName.get(d.properties.name);
+      d.properties.percent = d.properties.flu / d.properties.population * 100;
     });
 
   svg.append("g")
@@ -78,7 +93,7 @@ function ready(error, seoul, popul)
       .style("fill", function(d) { return fill(d.properties.population); })
       .on("mouseover", function(d){
         tooltip.style("visibility", "visible")
-        .text(Math.round(d.properties.population / 10000) + "만명");
+        .text("인구 : " + (d.properties.population / 10000).toFixed(2) + "만명");
       })
       .on("mousemove", function(){
         tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
@@ -91,6 +106,25 @@ function ready(error, seoul, popul)
       .datum(topojson.mesh(seoul, seoul.objects.seoul_municipalities_geo, function(a, b) { return a !== b; }))
       .attr("class", "boundary")
       .attr("d", path);
+
+  svg.append("g").selectAll("circle")
+    .data(features)
+    .enter().append("circle")
+      .attr("class", "vacc")
+      .attr("cx", function(d) { return path.centroid(d)[0]; })
+      .attr("cy", function(d) { return path.centroid(d)[1]; })
+      .attr("r", function(d) { return rscale(d.properties.flu);})
+      .attr("opacity", 0.8)
+      .on("mouseover", function(d){
+        tooltip.style("visibility", "visible")
+        .html("백신접종 인원 : " + (d.properties.flu / 10000).toFixed(2) + "만명 <br> 백신 비율 : " + (d.properties.percent).toFixed(2) + "%");
+      })
+      .on("mousemove", function(){
+        tooltip.style("top", (event.pageY-10)+"px").style("left",(event.pageX+10)+"px");
+      })
+      .on("mouseout", function(){
+        tooltip.style("visibility", "hidden");
+      });
 
   svg.selectAll('text')
       .data(features)
