add c# application comment

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 						<li>written in <code>Python</code></li>
 						<li>displayed in <code>JavaScript</code></li>
 						<li>shared via <code>Web</code></li>
+						<li>distributed via <code>C#:WPF</code></li>
 					</ol>
 				</section>
 				<section>
